# my_peblar

./: .gitignore  README.md  generate_invoice.sh  main.py  pyproject.toml
home_assistant/: fetch.py  parse.py
output/: pdf.py
