[project]
name = "my-peblar"
version = "0.1.0"
description = ""
authors = [
    {name = "Bressers, Willem",email = "w13370@eon.com"}
]
readme = "README.md"
requires-python = "3.14.2"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python-dotenv = "^1.2.2"
requests = "^2.33.0"
pandas = "^3.0.1"
reportlab = "^4.4.10"
xlsxwriter = "^3.2.9"
openpyxl = "^3.1.5"
